--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 	overflow-y: scroll;
 	resize: vertical;
 }
+
+pre.ql-syntax {
+	background-color: #23241f;
+	color: #f8f8f2;
+	overflow: scroll;
+	border-radius: 5px;
+	padding: 35px;
+}
